[gd_scene load_steps=7 format=3 uid="uid://dtodgpoqsjj8s"]

[ext_resource type="Theme" uid="uid://d3kms72g8lsqf" path="res://scenes/UI/base_ui_theme.tres" id="1_auudq"]
[ext_resource type="Script" path="res://scenes/UI/characters/character_select_screen/UI/character_select_ui.gd" id="2_hf0x0"]
[ext_resource type="PackedScene" uid="uid://bsbinym0w5is4" path="res://scenes/UI/characters/character_select_screen/UI/CSSHexagonGrid.tscn" id="3_1a6kn"]
[ext_resource type="PackedScene" uid="uid://dertr1qpkmo2i" path="res://scenes/UI/characters/character_select_screen/UI/HexagonButton.tscn" id="4_ipraf"]

[sub_resource type="LabelSettings" id="LabelSettings_bsis1"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_6mp1h"]
font_size = 50

[node name="CharacterSelectUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_auudq")
script = ExtResource("2_hf0x0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VSpliter" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="3DSceneReservedSpace" type="MarginContainer" parent="MarginContainer/VBoxContainer/VSpliter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VSpliter/3DSceneReservedSpace"]
layout_mode = 2

[node name="CharacterTitle" type="Label" parent="MarginContainer/VBoxContainer/VSpliter/3DSceneReservedSpace/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AAAA"
label_settings = SubResource("LabelSettings_bsis1")
horizontal_alignment = 1

[node name="CharacterSubtitle" type="Label" parent="MarginContainer/VBoxContainer/VSpliter/3DSceneReservedSpace/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BBBB
"
label_settings = SubResource("LabelSettings_6mp1h")
horizontal_alignment = 1

[node name="UiSelectSpace" type="MarginContainer" parent="MarginContainer/VBoxContainer/VSpliter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace"]
layout_mode = 2

[node name="CharacterPortraits" type="MarginContainer" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="CSSHexagonGrid" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace/VBoxContainer/CharacterPortraits" instance=ExtResource("3_1a6kn")]
unique_name_in_owner = true
layout_mode = 2
columns = 2
hex_button_scene = ExtResource("4_ipraf")

[node name="CharacterData" type="MarginContainer" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace/VBoxContainer/CharacterData"]
layout_mode = 2

[node name="CharacterDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace/VBoxContainer/CharacterData/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="SpellsIconsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/VSpliter/UiSelectSpace/VBoxContainer/CharacterData/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Buttons" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Container" type="Control" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
layout_mode = 2
text = "Lock In"
